fix tooltip below box-shadow scroll indicator (z-index)

--- a/src/components/PositionalBarplot.scss
+++ b/src/components/PositionalBarplot.scss
@@ -25,7 +25,7 @@
 
   .barplot-tooltip-holder{
     margin: 0;
-    z-index: 1001;
+    z-index: 1002;
   
     .bar-position-textblock {
       pointer-events: all;
